[project]
name = "asciify"
# Patch version is a datetime determined upon release
version = "0.1"
description = "Make ASCII art out of any image."
readme = "README.md"
authors = [{name = "Matt Hawthorn", email = "hawthorn.matthew@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "setuptools",
    # setuptools is no longer included in Python >= 3.12 venvs by default,
    # and `uv` does not include `setuptools`, (or `pip`), in any project venvs
    # however much of the Python ecosystem (Pycharm, various packages, etc.)
    # still expects `setuptools` to be present in any given venv.
    # at some point we will hopefully be able to remove this
    "numpy",
    "Pillow",
    "scikit-image",
]

[project.scripts]
asciify = "asciify:main"

[project.urls]
Repository = "https://github.com/mattHawthorn/asciify"

[dependency-groups]
dev= [
    "mypy~=1.11.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
mypy_path = "src"
exclude = '''(?x)(
    build/
    | dist/
    | \S+\.egg-info/
)'''
check_untyped_defs = true
